--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon App.js",
-     "build": "echo success"
+    "start": "nodemon App.js"
+     
   },
   "author": "",
   "license": "ISC",
